--- a/Flaskenv/templates/aboutus/partners.html
+++ b/Flaskenv/templates/aboutus/partners.html
@@ -16,11 +16,12 @@
 <h8>
     We are honored to be partnered with the following organizations
 </h8>
+<container>
     <div class="row" id="row1">
         <div class="column">
-            <div class="card">
+            <div class="card .col-xs-6 .col-md-4">
                 <center>
-                <img id="partner" src="static/assets/panera.PNG">
+                <img id="panera" src="static/assets/panera1.PNG">
                     <a href="https://www.panerabread.com/en-us/home.html">
                     <h9>Panera Bread</h9>
                     </a>
@@ -29,9 +30,9 @@
         </div>
 
         <div class="column">
-            <div class="card">
+            <div class="card .col-xs-6 .col-md-4">
                 <center>
-                <img id="partner" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
+                <img id="jimbos" src="static/assets/jimbos.jpg">
                     <a href="https://jimbos.com/">
                     <h9>Jimbo's</h9>
                     </a>
@@ -40,9 +41,9 @@
         </div>
 
         <div class="column">
-            <div class="card">
+            <div class="card .col-xs-6 .col-md-4">
                 <center>
-                <img id="partner" src="static/assets/producegood-logo.jpg">
+                <img id="producegood" src="static/assets/producegood.jpg">
                     <a href="https://producegood.org/">
                     <h9>ProduceGood</h9>
                     </a>
@@ -52,9 +53,9 @@
     </div>
 <div class="row" id="row2">
     <div class="column">
-        <div class="card">
+        <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="partner" src="static/assets/foundrychurch.jpg">
+                <img id="foundry" src="static/assets/foundrychurch1.jpg">
                 <a href="http://thefoundryescondido.com/">
                 <h9>Foundry Community Church</h9>
                 </a>
@@ -62,22 +63,23 @@
         </div>
     </div>
     <div class="column">
-        <div class="card">
+        <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="partner" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
+                <img id="jimbos" src="static/assets/jimbos.jpg">
                 <h9>Lorem</h9>
             </center>
         </div>
     </div>
     <div class="column">
-        <div class="card">
+        <div class="card .col-xs-6 .col-md-4">
             <center>
-                <img id="partner" src="static/assets/producegood-logo.jpg">
+                <img id="producegood" src="static/assets/jimbos.jpg">
                 <h9>Ipsum</h9>
             </center>
         </div>
     </div>
 </div>
+</container>
 </body>
 {% endblock %}
 
