--- a/Flaskenv/templates/getinvolved/login.html
+++ b/Flaskenv/templates/getinvolved/login.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <div class="scroll-text">
-            The login and register pages are currently under maintenance. To contact us, refer to the <a href="{{ url_for('contact') }}">Contact Page</a>. To donate, refer to the <a href="{{ url_for('donation') }}">Donation Form</a>. We apologize for the inconvenience and are working to find a solution.
+            The login and register pages are currently under maintenance. To contact us, refer to the <a href="{{ url_for('contact') }}">Contact Page</a>. To donate, refer to the <a href="{{ url_for('donation') }}">Donation Form</a>.
         </div>
     </div>
     <h1 id="h1padding">Welcome back!</h1>
