--- a/Flaskenv/templates/layouts/navbar.html
+++ b/Flaskenv/templates/layouts/navbar.html
@@ -79,8 +79,8 @@
                 "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
         </script>
          <form class="form-inline">
-           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+           <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button> -->
          </form>
 {#        <div class="navbar-right">#}
 {#            <div class="navbar-nav">#}
