partners for smaller screens

--- a/Flaskenv/templates/aboutus/partners.html
+++ b/Flaskenv/templates/aboutus/partners.html
@@ -57,7 +57,7 @@
             <center>
                 <img id="foundry" src="static/assets/foundrychurch1.jpg">
                 <a href="http://thefoundryescondido.com/">
-                <h9>Foundry Community Church</h9>
+                <h9>Foundry Church</h9>
                 </a>
             </center>
         </div>
