index for smaller screens

--- a/Flaskenv/templates/layouts/index.html
+++ b/Flaskenv/templates/layouts/index.html
@@ -94,7 +94,7 @@
         <div class="flex-parent hero-desktop">
             <div class="flex-child _40 hero-padding">
                 <div class="child-div">
-                    <h7 style="color:black;padding-left:300px;font-size:95px">
+                    <h7 style="color:black;padding-left:15%;font-size:95px">
                         Project ELIMIN8
                     </h7>
                 </div>
