--- a/Flaskenv/static/styles/about.css
+++ b/Flaskenv/static/styles/about.css
@@ -60,8 +60,11 @@ h1 {
     box-shadow: 0px 25px 40px #1687d933;
     transform: translateZ(.4px) scale(.6) translateX(-104%) translateY(-40%) rotate(-5deg);
 }
+#slide-image1, #slide-image2 {
+    margin-bottom: 10%
+}
 p {
-    font-size: 24px;
+    font-size: 140%;
     line-height: 150%;
     color: #333;
 }
@@ -91,4 +94,7 @@ p {
 }
 .spacing {
     margin-top: 5%;
+}
+#kard3 {
+    margin-bottom: 10%
 }
