--- a/Flaskenv/templates/aboutus/aboutelimin8.html
+++ b/Flaskenv/templates/aboutus/aboutelimin8.html
@@ -17,7 +17,7 @@
     <div id="kard1" class="kard">
         <div class="title">
           <h1>What is Project ELIMIN8?</h1>
-          <p>Project ELIMIN8 was started with one goal in mind: to reduce waste and starvation. We are an ever-growing non-profit branch organization under CastSD that hopes to become independent soon. We are mainly located in San Diego, California but have expanded to other areas across America and are looking to expand throughout the world as well.</p>
+          <p>Project ELIMIN8 was started with one goal in mind: to reduce waste and starvation. We are an ever-growing non-profit branch organization under CastSD that strives to make a change in our communities. We are mainly located in San Diego, California but have expanded to other areas across America and are looking to expand throughout the world as well.</p>
         </div>
       </div>
     
