replace placehodler images

--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -26,8 +26,8 @@
           <h1>What does Project ELIMIN8 do?</h1>
           <p>Members of Project ELIMIN8 pick up surplus food and donate it to organizations weekly. We set up relations between organizations that give us surplus food and donate to organizations that are in need of it. That way, we are able to help both causes with maximal effectiveness.</p>
         </div>
-        <img id="slide-image1" src="/static/assets/pant.jpg">
-        <img id="slide-image2" src="/static/assets/chin.jpg"> 
+        <img id="slide-image1" src="/static/assets/placehdoler.PNG">
+        <img id="slide-image2" src="/static/assets/placehdoler.PNG"> 
       </div>
       
       <div id="kard3" class="kard">
