transparent base image

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -32,7 +32,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-* sticky" id="navbar" style="font-family: 'Poppins', sans-serif">
     <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('index')}}">
-        <img src="/static/assets/image_6483441.JPG" width="75rem" height="50rem" class="center" alt="">
+        <img src="\static\assets\image_6483441-removebg-preview.png" width="75rem" height="50rem" class="center" alt="">
     </a>
     {#<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
