--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
     <link rel="stylesheet" href="/static/assets/scss">
-    <link rel="icon" href="/static/assets/image_6483441.JPG">
+    <link rel="icon" href="\static\assets\image_6483441-removebg-preview.png">
     <title>| Project ELIMIN8 |</title>
-    <link rel="shortcut icon" href="/static/assets/image_6483441.JPG">
+    <link rel="shortcut icon" href="\static\assets\image_6483441-removebg-preview.png">
 
 
     {%block head %}
