--- a/static/styles/founders.css
+++ b/static/styles/founders.css
@@ -7,9 +7,9 @@ h1 {
 
 body 
      {
-        background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
-                background-size: 400% 400%;
-                animation: gradient 10s ease infinite;
+                background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+                background-repeat: no-repeat;
+                background-size:100% 100%;
                 height: 100vh;
             }
     
