--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -4,6 +4,12 @@ body {
 h1, body, .input, div {
     font-family: 'Poppins', sans-serif;
 }
+body {
+    background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    height: 100vh;
+}
 h1 {
     display:flex;
     justify-content: center;
