--- a/static/styles/partners.css
+++ b/static/styles/partners.css
@@ -39,10 +39,10 @@ body
      {
         overflow-x: hidden;
         color:#000000;
-        background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
-                background-size: 400% 400%;
-                animation: gradient 10s ease infinite;
-                height: 100%;
+        background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+        background-repeat: no-repeat;
+        background-size:100% 100%;
+        height: 100vh;
             }
     
             @keyframes gradient {
