--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -24,19 +24,19 @@
                 background-position: 0% 50%;
             }
         } */
-            background-image: url({{ url_for('static', filename='assets/placehdoler.PNG') }});
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 100%;
         }
         .bgimg-3 {
-            background-image: url({{ url_for('static', filename='assets/placehdoler.PNG') }});
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 400px;
         }
         .bgimg-2 {
-            background-image: url({{ url_for('static', filename='assets/placehdoler.PNG') }});
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             max-height: 700px;
