--- a/templates/getinvolved/login.html
+++ b/templates/getinvolved/login.html
@@ -11,6 +11,7 @@
 {% endblock %}
 {% block body %}
 <body>
+    <wrapper>
     <div>
         <div class="scroll-text">
             The login and register pages are currently under maintenance. To contact us, refer to the <a href="{{ url_for('contact') }}">Contact Page</a>. To donate, refer to the <a href="{{ url_for('donation') }}">Donation Form</a>.
@@ -40,6 +41,7 @@
         <a href="{{ url_for('register') }}">Register</a></p> 
 </center>
 </container>
+</wrapper>
 </body>
 {% endblock %}
 </html>
