--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -4,11 +4,31 @@ body {
 h1, body, .input, div {
     font-family: 'Poppins', sans-serif;
 }
-body {
+wrapper {
     background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
     background-repeat: no-repeat;
     background-size:100% 100%;
     height: 100vh;
+}
+body {
+    color: #000000;
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
+    background-size: 400% 400%;
+    animation: gradient 10s ease infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 h1 {
     display:flex;
