--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -4,19 +4,22 @@ body {
 h1, body, .input, div {
     font-family: 'Poppins', sans-serif;
 }
-wrapper {
+/* wrapper {
     background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
     background-repeat: no-repeat;
     background-size:100% 100%;
     height: 100vh;
-}
+} */
 body {
+    background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    height: 100vh;
     color: #000000;
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
-    height: 100vh;
 }
 
 @keyframes gradient {
