--- a/Flaskenv/templates/aboutus/founders.html
+++ b/Flaskenv/templates/aboutus/founders.html
@@ -6,6 +6,14 @@
         <meta charset="UTF-8">
         <title>Project ELIMIN8|Founders</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/founders.css') }}">
+        <style>
+            body {
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+            min-height: 100%;
+      }
+        </style>
     </head>
 {% endblock %}
 {% block body %}
