--- a/Flaskenv/static/styles/contact.css
+++ b/Flaskenv/static/styles/contact.css
@@ -4,11 +4,16 @@ body, div {
 .inlineforlinks {
     display:inline
 }
+html {
+    height: 100%;
+    overflow: hidden;
+}
 body {
     background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
     height: 100vh;
+    overflow-y: scroll;
 }
 
 @keyframes gradient {
