--- a/Flaskenv/static/styles/donation.css
+++ b/Flaskenv/static/styles/donation.css
@@ -2,6 +2,10 @@ iframe {
     display:flex;
     margin:auto;
 }
+html {
+    height: 100%;
+    overflow: hidden;
+}
 container {
     padding-top:5rem;
     margin: auto;
@@ -19,6 +23,7 @@ body {
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
     height: 100vh;
+    overflow-y: scroll;
 }
 
 @keyframes gradient {
