--- a/Flaskenv/static/styles/founders.css
+++ b/Flaskenv/static/styles/founders.css
@@ -4,13 +4,17 @@ h1 {
     justify-content: center;
     color: #000000;
 }
-
+html {
+    height: 100%;
+    overflow: hidden;
+}
 body 
      {
         background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
                 background-size: 400% 400%;
                 animation: gradient 10s ease infinite;
                 height: 100vh;
+                overflow-y: scroll;
             }
     
             @keyframes gradient {
