--- a/Flaskenv/static/styles/login.css
+++ b/Flaskenv/static/styles/login.css
@@ -1,5 +1,10 @@
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
+}
+html {
+    height: 100%;
+    overflow: hidden;
 }
 h1, body, .input, div {
     font-family: 'Poppins', sans-serif;
