--- a/Flaskenv/static/styles/partners.css
+++ b/Flaskenv/static/styles/partners.css
@@ -1,8 +1,11 @@
-
 h1 {
     display: flex;
     justify-content: center;
     color: #000000;
+}
+html {
+    height: 100%;
+    overflow: hidden;
 }
 hr {
     width: 25%;
@@ -43,6 +46,7 @@ body
                 background-size: 400% 400%;
                 animation: gradient 10s ease infinite;
                 height: 100%;
+                overflow-y:scroll;
             }
     
             @keyframes gradient {
