--- a/Flaskenv/static/styles/register.css
+++ b/Flaskenv/static/styles/register.css
@@ -1,5 +1,10 @@
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
+}
+html {
+    height: 100%;
+    overflow: hidden;
 }
 h1, h2, label, button, div, a, body, p {
     font-family: 'Poppins', sans-serif
