--- a/Flaskenv/templates/aboutus/aboutelimin8.html
+++ b/Flaskenv/templates/aboutus/aboutelimin8.html
@@ -7,6 +7,12 @@
     <title>Project ELIMIN8|About</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/about.css') }}">
     <style>
+      body {
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+            min-height: 100%;
+      }
     </style>
 </head>
 {% endblock %}
