--- a/Flaskenv/templates/contact.html
+++ b/Flaskenv/templates/contact.html
@@ -6,6 +6,14 @@
     <meta charset="UTF-8">
     <title>Project ELIMIN8|Contact</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/contact.css') }}">
+    <style>
+        body {
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+            min-height: 200%;
+      }
+    </style>
 </head>
 {% endblock %}
 {% block body %}
