--- a/Flaskenv/templates/getinvolved/login.html
+++ b/Flaskenv/templates/getinvolved/login.html
@@ -7,6 +7,14 @@
     <title>Project ELIMIN8|Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
+    <style>
+        body {
+            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+            min-height: 100%;
+      }
+    </style>
 </head>
 {% endblock %}
 {% block body %}
