--- a/static/styles/donation.css
+++ b/static/styles/donation.css
@@ -19,12 +19,14 @@ container {
     margin-top: 5rem;
 } 
 body {
+    overflow-y: scroll;
+}
+body {
     font-family: 'Poppins', sans-serif;
     background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
     background-repeat: no-repeat;
     background-size:100% 100%;
     height: 100vh;
-    overflow-y: scroll;
 }
 
 @keyframes gradient {
