--- a/static/styles/contact.css
+++ b/static/styles/contact.css
@@ -9,6 +9,7 @@ html {
     overflow: hidden;
 }
 body {
+    overflow-y: scroll;
     background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
     background-repeat: no-repeat;
     background-size:100% 100%;
