--- a/static/styles/founders.css
+++ b/static/styles/founders.css
@@ -10,6 +10,7 @@ html {
 }
 body 
      {
+            overflow-y: scroll;
             background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
