--- a/static/styles/register.css
+++ b/static/styles/register.css
@@ -1,5 +1,10 @@
+html {
+    height: 100%;
+    overflow: hidden;
+}
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
     background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
     background-repeat: no-repeat;
     background-size:100% 100%;
