bg gradient merge test

--- a/templates/getinvolved/login.html
+++ b/templates/getinvolved/login.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
     <style>
-        body {
+        /* body {
             background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 100%;
-      }
+      } */
     </style>
 </head>
 {% endblock %}
