--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -10,6 +10,12 @@ h1, body, .input, div {
     font-family: 'Poppins', sans-serif;
 }
 body {
+    background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    min-height: 100%;
+}
+body {
     color: #000000;
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
