--- a/templates/getinvolved/register.html
+++ b/templates/getinvolved/register.html
@@ -25,7 +25,7 @@
                 The login and register pages are currently under maintenance. To contact us, refer to the <a href="{{ url_for('contact') }}">Contact Page</a>. To donate, refer to the <a href="{{ url_for('donation') }}">Donation Form</a>.
             </div>
         </div>
-        <h1>Register</h1>
+        <h1 id="h1padding">Register</h1>
 <container>
 <form style="padding-right:5rem; padding-left: 5rem">
     <h2>Welcome!</h2>
