fix scroll text

--- a/templates/getinvolved/register.html
+++ b/templates/getinvolved/register.html
@@ -21,7 +21,7 @@
 {% block body %}
     <body>
         <div>
-            <div class="scroll-text">
+            <div class="scroll-text" style="font-family: 'Poppins', sans-serif">
                 The login and register pages are currently under maintenance. To contact us, refer to the <a href="{{ url_for('contact') }}">Contact Page</a>. To donate, refer to the <a href="{{ url_for('donation') }}">Donation Form</a>.
             </div>
         </div>
