--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -36,7 +36,7 @@
             min-height: 400px;
         }
         .bgimg-2 {
-            background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
+            background-image: url({{ url_for('static', filename='assets/definingelimin8.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             max-height: 700px;
