--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -41,6 +41,11 @@
             background-size:100% 100%;
             max-height: 700px;
         }
+        .bgimg-4 {
+            background-image: url({{ url_for('static', filename='assets/bgimg4.png') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+        }
 
         {#.bgimg-3 {#}
         {#    background-image: url({{ url_for('static', filename='assets/chin.jpg') }});#}
@@ -147,7 +152,7 @@
         <p>Our Mission: To collect surplus food items that restaurants and businesses can no longer sell and distribute them to local food banks, homeless shelters, schools, and other organizations in need.</p>
     </div>
     </div>
-<div class="bgimg-1"></div>
+<div class="bgimg-4"></div>
 <!-- <button class="btn btn-light" onclick="scrollToTop()"><div class="arrow"></div>To Top</button> -->
     </body>
 {% endblock %}
