--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -45,6 +45,7 @@
             background-image: url({{ url_for('static', filename='assets/bgimg4.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
+            min-height:500px;
         }
 
         {#.bgimg-3 {#}
