--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -42,7 +42,7 @@
             max-height: 700px;
         }
         .bgimg-4 {
-            background-image: url({{ url_for('static', filename='assets/bgimg4.png') }});
+            background-image: url({{ url_for('static', filename='assets/bgimg4.PNG') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height:500px;
