--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -45,7 +45,8 @@
             background-image: url({{ url_for('static', filename='assets/bgimg4.PNG') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
-            min-height:500px;
+            min-height: 900px;
+            opacity: 0.8
         }
 
         {#.bgimg-3 {#}
