--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -1,6 +1,7 @@
 {% extends "layouts/base.html" %}
 {% block head %}
 <meta charset="utf-8">
+<meta name="keywords" content="project elimin8, elimin8, castsd" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
