--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -38,8 +38,17 @@
       
       <div id="kard3" class="kard">
         <div class="title">
-          <h1>How can I get involved?</h1>
-          <p>To become a member, you can register through our <a href="{{ url_for('register') }}">Register Page</a>. After creating an account, we will be in contact with you as soon as possible in order to set up a connection within your area. For donations, please refer to the <a href="{{ url_for('contact') }}">Donation Page</a>. For your unanswered questions, lingering curiosity, and anything in general, please refer to our <a href="{{ url_for('contact') }}">Contact Page</a>.</p>
+          <h1>Why should I get involved?</h1>
+          <p>You can help our community mitigate food waste while receiving volunteer hours for your efforts by simply becoming one of our drivers. As a driver, you will pick up food from a store or restaurant partner and drop off food to a local charitable organization partner. Your contributions would be greatly appreciated.</p>
+        </div>
+        <img id="slide-image3" src="/static/assets/placehdoler.PNG"> 
+      </div>
+
+
+      <div id="kard4" class="kard">
+        <div class="title">
+          <h1>How can I get involved?</h1>.
+          <p>To become a member, you can register through our <a href="{{ url_for('register') }}">Register Page</a>. After creating an account, we will be in contact with you as soon as possible in order to set up a connection within your area, and you can start helping your community while earning volunteer hours. For donations, please refer to the <a href="{{ url_for('contact') }}">Donation Page</a>. For your unanswered questions, lingering curiosity, and anything in general, please refer to our <a href="{{ url_for('contact') }}">Contact Page</a>.</p>
         </div>
       </div>
 </body>
