--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -31,10 +31,10 @@
             min-height: 100%;
         }
         .bgimg-3 {
-            background-image: url({{ url_for('static', filename='assets/definingelimin8.png') }});
+            background-image: url({{ url_for('static', filename='assets/defininglelimin8pt2.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
-            min-height: 900px;
+            min-height: 700px;
         }
         .bgimg-2 {
             background-image: url({{ url_for('static', filename='assets/banner_bg2.png') }});
@@ -43,36 +43,11 @@
             max-height: 700px;
         }
         .bgimg-4 {
-            background-image: url({{ url_for('static', filename='assets/bgimg4.PNG') }});
+            background-image: url({{ url_for('static', filename='assets/infographic.PNG') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 900px;
             opacity: 0.8
-        }
-
-        {#.bgimg-3 {#}
-        {#    background-image: url({{ url_for('static', filename='assets/chin.jpg') }});#}
-        {#    min-height: 400px;#}
-        body {
-            color: #000000;
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(-45deg, #ffffff, #ffffff,#e7ffff,#ffffff);
-            background-size: 400% 400%;
-            animation: gradient 10s ease infinite;
-            height: 100vh;
-        }
-
-        @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
         }
         .arrow{
             display: inline-block;
@@ -88,6 +63,9 @@
             font-size:95px;
             font-family: 'Joan', serif;
                 }
+        .footer-white {
+            border-top-style: hidden !important
+        }
     </style>
 {% endblock %}
 
