--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -50,7 +50,7 @@ h1 {
 #slide-image2 {
     position: absolute;
     top: 50%;
-    left: 23%;
+    left: 21%;
     width: 520px;
     height: 450px;
     margin-top: 50rem;
@@ -60,8 +60,20 @@ h1 {
     box-shadow: 0px 25px 40px #1687d933;
     transform: translateZ(.4px) scale(.6) translateX(-104%) translateY(-40%) rotate(-5deg);
 }
-#slide-image1, #slide-image2 {
+#slide-image1, #slide-image2, #slide-image3 {
     margin-bottom: 10%
+}
+#slide-image3 {
+    position: absolute;
+    top: 95%;
+    left: 65%;
+    width: 320px;
+    height: 270px;
+    margin-top: 92rem;
+    padding: 10px;
+    background-color: #ffffff; 
+    border-radius: 15px;
+    box-shadow: 0px 25px 40px #1687d933;
 }
 p {
     font-size: 140%;
