--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -43,7 +43,7 @@
             max-height: 700px;
         }
         .bgimg-4 {
-            background-image: url({{ url_for('static', filename='assets/infographic.PNG') }});
+            background-image: url({{ url_for('static', filename='assets/infographic.png') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 900px;
