--- a/templates/aboutus/aboutelimin8.html
+++ b/templates/aboutus/aboutelimin8.html
@@ -42,6 +42,7 @@
           <p>You can help our community mitigate food waste while receiving volunteer hours for your efforts by simply becoming one of our drivers. As a driver, you will pick up food from a store or restaurant partner and drop off food to a local charitable organization partner. Your contributions would be greatly appreciated.</p>
         </div>
         <img id="slide-image3" src="/static/assets/placehdoler.PNG"> 
+        <img id="slide-image4" src="/static/assets/placehdoler.PNG"> 
       </div>
 
 
