--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -66,11 +66,12 @@ h1 {
 }
 #slide-image3 {
     position: absolute;
-    top: 115%;
-    left: 85%;
+    top: 225%;
+    left: 73%;
+    bottom: 25%;
     width: 420px;
     height: 340px;
-    margin-top: 50rem;
+    margin-top: 60rem;
     transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
     padding: 10px;
     background-color: #ffffff; 
@@ -79,11 +80,12 @@ h1 {
   }
 #slide-image4 {
     position: absolute;
-    top: 120%;
-    left: 70%;
+    top: 225%;
+    left: 85%;
+    bottom: 25%;
     width: 520px;
     height: 450px;
-    margin-top: 60rem;
+    margin-top: 50rem;
     padding: 10px;
     background-color: #ffffff; 
     border-radius: 15px;
