--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -34,9 +34,9 @@
 
     @media screen and (max-width: 1000px) {
     #google_translate_element {
-        /* display: none; */
-        left: 15%;
-        position: absolute
+        display: none;
+        /* left: 15%;
+        position: absolute */
     }
     #hamburger {
       display: block;
