--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -28,47 +28,18 @@
         transform: translateY(0px);
         z-index:999
     }
-    #hamburger {
-        display: none;
-    }
 
-    @media screen and (max-width: 1000px) {
-    #google_translate_element {
-        display: none;
-        /* left: 15%;
-        position: absolute */
-    }
-    #hamburger {
-      display: block;
-      padding: 5px 5px;
-      position: relative;
-      width: 4rem;
-      height: 4rem;
-      margin-left: auto
-    }
-    .fa {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 4rem;
-      height: 3.5rem;
-    }
-    #nav-items {
-        display: hidden;
-    }
-}
 </style>
 <nav class="navbar navbar-expand-lg navbar-light bg-* sticky" id="navbar" style="font-family: 'Poppins', sans-serif">
     <div class="container-fluid">
-    <a class="navbar-brand" href="{{url_for('index')}}">
+    <a class="navbar-brand active" href="{{url_for('index')}}">
         <img src="\static\assets\image_6483441-removebg-preview.png" width="75rem" height="50rem" class="center" alt="">
     </a>
-    {#<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>#}
+    </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div id="nav-items" class="navbar-nav">
-
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     About
@@ -103,10 +74,10 @@
             }
         </script>
     <!-- <button href="javascript:void(0);" onclick="myFunction()" id="hamburger" class="btn btn-outline-primary"><i class="fa fa-bars fa-2x"></i></button> -->
-    <a id="hamburger" href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <!-- <a id="hamburger" href="javascript:void(0);" class="icon" onclick="myFunction()">
         <button class="btn btn-outline-primary"><i class="fa fa-bars fa-3x"></i></button>
-      </a>
-    <script>
+      </a> -->
+    <!-- <script>
         function myFunction() {
             var x = document.getElementById("nav-items");
             if (x.style.display === "block") {
@@ -115,7 +86,7 @@
                 x.style.display = "block";
             }
             }
-    </script>
+    </script> -->
         <script type="text/javascript" src=
                 "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
         </script>
