fix modal and partners sizing

--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -65,7 +65,7 @@
             <center>
                 <img id="foundry" src="static/assets/foundrychurch1.jpg">
                 <a href="http://thefoundryescondido.com/">
-                <h9>Foundry Church</h9>
+                <h9>The FCC</h9>
                 </a>
             </center>
         </div>
